2007-01-14 [colin]	2.7.0cvs27

	* src/gtk/inputdialog.c
		Make sure we don't print passwords in
		clear text when in debug mode

2007-01-14 [colin]	2.7.0cvs26

	* src/gtk/gtksctree.c
		Fix bug 1098, 'bogus last row display 
		after expanding a thread'. Patch by
		Jindrich Makovicka <makovick@gmail.com>

2007-01-14 [colin]	2.7.0cvs25

	* src/etpan/imap-thread.c
		Close socket manually before
		freeing the imap struct

2007-01-14 [colin]	2.7.0cvs24

	* src/etpan/imap-thread.c
		Maybe fix new reconnection issues

2007-01-13 [colin]	2.7.0cvs23

	* src/summaryview.c
		Freeze/thaw on thread selection

2007-01-13 [paul]	2.7.0cvs22

	* src/mainwindow.c
	* src/summaryview.c
	* src/summaryview.h
		add 'Edit/Delete thread'

2007-01-13 [colin]	2.7.0cvs21

	* src/prefs_account.c
	* src/prefs_compose_writing.c
	* src/prefs_message.c
	* src/prefs_msg_colors.c
	* src/prefs_other.c
	* src/prefs_receive.c
	* src/prefs_spelling.c
	* src/prefs_summaries.c
	* src/prefs_themes.c
	* src/gtk/gtkutils.c
	* src/gtk/gtkutils.h
	* src/plugins/pgpcore/prefs_gpg.c
	* src/plugins/spamassassin/spamassassin_gtk.c
		Factorize gtk frame creation
		Patch by Pawel

2007-01-13 [colin]	2.7.0cvs20

	* src/message_search.c
	* src/summary_search.c
		Fix Enter in search windows
	* src/messageview.c
		Fix body search starting at the
		end of the mail (and asking for loop)

2007-01-13 [colin]	2.7.0cvs19

	* src/etpan/imap-thread.c
		Make sure we don't free the same imap
		twice

2007-01-13 [colin]	2.7.0cvs18

	* commitHelper
		Allow multiple commitHelpers to
		run at once

2007-01-12 [colin]	2.7.0cvs17

	* src/etpan/imap-thread.c
		Make sure we get rid of the previous mailimap
		when connecting - just in case disconnect was
		unclean

2007-01-12 [paul]	2.7.0cvs16

	* src/compose.c
		Strip S/MIME signatures when re-editing
		S/MIME signed messages.

2007-01-12 [paul]	2.7.0cvs15

	* configure.ac
	* src/addressbook.c
	* src/foldersel.c
	* src/folderview.c
	* src/main.c
		no need to define CLAWS anymore, remove