@@ -1,3 +1,11 @@
+2007-01-14 [colin]	2.7.0cvs28
+
+	* src/etpan/imap-thread.c
+		Delete the old imap just after allocating
+		the new one. Makes sure we don't get the
+		same pointer by sheer luck, which feels
+		strange in the debug log.
+
 2007-01-14 [colin]	2.7.0cvs27
 
 	* src/gtk/inputdialog.c
